GNOME Bugzilla – Bug 582686
Don't g_error() when failing to release an argument
Last modified: 2009-05-15 15:44:47 UTC
Failing to release an argument can be a symptom of bad introspection data or other problems that aren't an internal error in gjs. Even if it is a symptom of an internal error in gjs, propagating the exception back gives a more meaningful failure than just aborting.
Created attachment 134674 [details] [review] Don't g_error() when failing to release an argument
Makes sense to me.
Pushed.