Don't g_error() when failing to release an argument

Failing to release an argument can be a symptom of bad introspection
data or other problems that aren't an internal error in gjs. Even if
it is a symptom of an internal error in gjs, propagating the exception
back gives a more meaningful failure than just aborting.

http://bugzilla.gnome.org/show_bug.cgi?id=582686